Landing Page and Portfolio website completed

--- a/style.css
+++ b/style.css
@@ -495,13 +495,12 @@ span{
     background-color: var(--bg-color);
     border: 3px solid var(--main-color);
     box-shadow: 0 0 10px var(--main-color);
-    /* color: var(--main-color); */
     min-height: 460px;
     min-width: 400px;
     border-radius: 3rem;
-    /* border: 5px solid transparent; */
     cursor: pointer;
     transition: 0.3s ease-in-out;
+    place-content: center;
 }
 .project-box:hover{
     transform: scale(1.09);
@@ -513,7 +512,6 @@ span{
     flex-direction: column;
     text-align: center;
     min-height: 400px;
-    /* max-width: 300px; */
     justify-content: center;
     align-items: center;
 }
@@ -661,6 +659,9 @@ span{
         grid-template-columns: repeat(2, 1fr);
         margin: 0 5rem;
     }
+    .project-info img{
+        width: 45vw;
+    }
 }
 
 @media(max-width:991px){
@@ -692,6 +693,9 @@ span{
     }
     .footer{
         padding: 2rem 3%;
+    }
+    .project-info img{
+        width: 45vw;
     }
 }
 
@@ -744,5 +748,8 @@ span{
     }
     .services-container{
         grid-template-columns: repeat(1, 1fr);
+    }
+    .project-info img{
+        width: 420px;
     }
 }
