--- a/style.css
+++ b/style.css
@@ -495,8 +495,8 @@ span{
     background-color: var(--bg-color);
     border: 3px solid var(--main-color);
     box-shadow: 0 0 10px var(--main-color);
-    min-height: 460px;
-    min-width: 400px;
+    height: 460px;
+    width: 450px;
     border-radius: 3rem;
     cursor: pointer;
     transition: 0.3s ease-in-out;
@@ -750,6 +750,43 @@ span{
         grid-template-columns: repeat(1, 1fr);
     }
     .project-info img{
-        width: 420px;
+        width: 350px;
+        padding: 1rem;
+    }
+    .project-info .project-description{
+        font-size: medium;
+        max-width: 350px;
+        padding: 7px;
+    }
+}
+@media(max-width:425px){
+    .projects-container{
+        max-width: 300px;
+    }
+    .project-box{
+        background-color: red;
+        max-height: 350px;
+    }
+    .project-info{
+        max-width: 300px;
+        max-height: 250px;
+    }
+    .project-info img{
+        top: 0px;
+        max-width: 300px;
+        padding: 10px;
+    }
+    .project-info .project-description{
+        font-size: small;
+        max-width: 250px;
+        padding: 3px;
+        margin: 10px auto;
+    }
+    .project-info h4{
+        font-family: sans-serif;
+        font-size: 2rem;
+        text-shadow: 0 0 25px var(--main-color);
+        color: var(--main-color);
+        line-height: 1.25;
     }
 }
