--- a/style.css
+++ b/style.css
@@ -790,4 +790,7 @@ span{
         color: var(--main-color);
         line-height: 1.25;
     }
+    .services-container{
+        place-content: center;
+    }
 }
